# scrybe

./: .gitignore  .replit  Pipfile  README.md  pyproject.toml
src/: app.py  config.json  main.py
src/assets/: pickup_lines.txt
src/cogs/: chatbot.py  chatbot_rewrite.py  economy.py  entertainment.py  library.py  moderation.py  server.py  staff.py  stats.py  testing.py  users.py  🗣️.py
src/data/: chatbot_rewrite.py  economy_controller.py  library_controller.py  users.py
src/ext/: economy_controller.py  pronouns_page.py
src/get_data/: server.py
src/unused/: chatbot.py
